--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'application'
     id 'jacoco'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 mainClassName = 'seedu.address.Main'
@@ -38,6 +39,11 @@ task coverage(type: JacocoReport) {
         html.required = true
         xml.required = true
     }
+}
+
+javafx {
+    version = '17'
+    modules = [ 'javafx.controls','javafx.graphics', 'javafx.fxml' ]
 }
 
 dependencies {
