--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveFileName = 'NUSCourseMates.jar'
+    archiveFileName = 'NUSCoursemates.jar'
 }
 
 defaultTasks 'clean', 'test'
